[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b2tob64"
version = "1.1.0"
authors = [
  { name="Vaughn Gugger", email="vjgtigers@gmail.com" },
]
description = "Custom converting b2/b42 to and from b64/b2"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vjgtigers/b2tob64"
"Bug Tracker" = "https://github.com/vjgtigers/b2tob64/issues"